--- a/BaeJoon/Makefile
+++ b/BaeJoon/Makefile
@@ -2,17 +2,20 @@ t=$1
 #CC=clang++
 CC=g++
 
-OPT=std=c++17
-HEAP=268435456
+OPT=std=c++14
 
 
 all: $(t) exec
 
 $(t) : $(t).cpp
-	$(CC) -$(OPT) -o $(t) -g $(t).cpp
+	$(CC) -$(OPT) -Wall -o $(t) -g $(t).cpp
 
 exec:
 	./$(t)
 
 clean:
 	find . ! \( -name '*.cpp' -o -name 'Makefile' -o -name '.' \) | xargs rm -r
+
+temp: 
+	$(CC) -$(OPT) -o temp -g temp.cpp
+	./temp
